error correction and alignment with CRAN

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_eurostat_data)
 export(get_eurostat_dsd)
 export(get_eurostat_raw)
 export(get_eurostat_toc)
+export(load_cfg)
 export(put_eurostat_cache)
 export(search_eurostat_dsd)
 export(search_eurostat_toc)
