--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: restatapi
 Type: Package
-Title: using SDMX to search and retrieve data from Eurobase
-Date: 2019-03-27
-Version: 0.1.2
+Title: Using the REST API with rsdmx to Search and Retrieve Data from Eurostat Database
+Date: 2019-04-04
+Version: 0.1.3
 Encoding: UTF-8
 Authors@R: person("Mátyás", "Mészáros", email = "matyas.meszaros@ec.europa.eu", role = c("aut", "cre"))
 Description: Tools to search and download data from the Eurostat database using the SDMX standard.
-License: EUPL-1.1 | file LICENSE
+License: EUPL-1.1 
 Imports: data.table, parallel, rjson, rsdmx, readr, utils, xml2
 Suggests: knitr, rmarkdown, roxygen2, testthat, tmap
 LazyData: true
-VignetteBuilder: knitr
 NeedsCompilation: no
 RoxygenNote: 6.1.1
