--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: restatapi
 Type: Package
-Title: Using the REST API with rsdmx to Search and Retrieve Data from Eurostat Database
-Date: 2019-04-04
-Version: 0.1.3
+Title: Using the REST API with the rsdmx Package to Search and Retrieve Data from Eurostat Database
+Date: 2019-04-17
+Version: 0.1.4
 Encoding: UTF-8
 Authors@R: person("Mátyás", "Mészáros", email = "matyas.meszaros@ec.europa.eu", role = c("aut", "cre"))
 Description: Tools to search and download data from the Eurostat database using the SDMX standard.
 License: EUPL-1.1 
-Imports: data.table, parallel, rjson, rsdmx, readr, utils, xml2
-Suggests: knitr, rmarkdown, roxygen2, testthat, tmap
+Imports: data.table, parallel, rjson, rsdmx, xml2
+Suggests: knitr, rmarkdown, testthat
 LazyData: true
 NeedsCompilation: no
 RoxygenNote: 6.1.1
