--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: restatapi
 Type: Package
-Title: Tools using the REST API with the SDMX Web Service to Search and Retrieve Data from Eurostat Database
-Date: 2019-04-17
-Version: 0.1.4
+Title: Search and Retrieve Data from Eurostat Database
+Date: 2019-04-28
+Version: 0.1.6
 Encoding: UTF-8
 Authors@R: person("Mátyás", "Mészáros", email = "matyas.meszaros@ec.europa.eu", role = c("aut", "cre"))
 Description: Eurostat is the statistical office of the European Union and provides high quality statistics for Europe.
              Large set of the data is disseminated through the Eurostat database (<https://ec.europa.eu/eurostat/data/database>). 
-             The tools are using the Statistical Data and Metadata eXchange (SDMX <https://sdmx.org>) Web Services 
+             The tools are using the REST API with the Statistical Data and Metadata eXchange (SDMX <https://sdmx.org>) Web Services 
              (<https://ec.europa.eu/eurostat/web/sdmx-web-services/about-this-service>) to search and download data from 
-             the Eurostat database using the SDMX standard.
+             the Eurostat database using the SDMX standard. 
 License: EUPL-1.1 
-Imports: data.table, parallel, rjson, rsdmx, xml2
+Imports: data.table, rjson, rsdmx, xml2
 Suggests: knitr, rmarkdown, testthat
 LazyData: true
 NeedsCompilation: no
