included EU_countries

--- a/inst/extdata/rest_api_config.json
+++ b/inst/extdata/rest_api_config.json
@@ -712,5 +712,371 @@
     },
     "2": null,
     "3": null
+  },
+  "COUNTRIES":{
+    "EU28": [
+      "BE",
+      "BG",
+      "CZ",
+      "DK",
+      "DE",
+      "EE",
+      "IE",
+      "EL",
+      "ES",
+      "FR",
+      "HR",
+      "IT",
+      "CY",
+      "LV",
+      "LT",
+      "LU",
+      "HU",
+      "MT",
+      "NL",
+      "AT",
+      "PL",
+      "PT",
+      "RO",
+      "SI",
+      "SK",
+      "FI",
+      "SE",
+      "UK"
+      ],
+    "EU27": [
+      "BE",
+      "BG",
+      "CZ",
+      "DK",
+      "DE",
+      "EE",
+      "IE",
+      "EL",
+      "ES",
+      "FR",
+      "IT",
+      "CY",
+      "LV",
+      "LT",
+      "LU",
+      "HU",
+      "MT",
+      "NL",
+      "AT",
+      "PL",
+      "PT",
+      "RO",
+      "SI",
+      "SK",
+      "FI",
+      "SE",
+      "UK"
+      ],
+    "EU25": [
+      "BE",
+      "CZ",
+      "DK",
+      "DE",
+      "EE",
+      "IE",
+      "EL",
+      "ES",
+      "FR",
+      "IT",
+      "CY",
+      "LV",
+      "LT",
+      "LU",
+      "HU",
+      "MT",
+      "NL",
+      "AT",
+      "PL",
+      "PT",
+      "SI",
+      "SK",
+      "FI",
+      "SE",
+      "UK"
+      ],
+    "EU15": [
+      "BE",
+      "DK",
+      "DE",
+      "IE",
+      "EL",
+      "ES",
+      "FR",
+      "IT",
+      "LU",
+      "NL",
+      "AT",
+      "PT",
+      "FI",
+      "SE",
+      "UK"
+      ],
+    "EU12": [
+      "BE",
+      "DK",
+      "DE",
+      "IE",
+      "EL",
+      "ES",
+      "FR",
+      "IT",
+      "LU",
+      "NL",
+      "PT",
+      "UK"
+      ],
+    "EU10": [
+      "BE",
+      "DK",
+      "DE",
+      "IE",
+      "EL",
+      "FR",
+      "IT",
+      "LU",
+      "NL",
+      "UK"
+      ],
+    "EU9": [
+      "BE",
+      "DK",
+      "DE",
+      "IE",
+      "FR",
+      "IT",
+      "LU",
+      "NL",
+      "UK"
+      ],
+    "EU6": [
+      "BE",
+      "DE",
+      "FR",
+      "IT",
+      "LU",
+      "NL"
+      ],
+    "EA19": [
+      "BE",
+      "DE",
+      "EE",
+      "IE",
+      "EL",
+      "ES",
+      "FR",
+      "IT",
+      "CY",
+      "LV",
+      "LT",
+      "LU",
+      "MT",
+      "NL",
+      "AT",
+      "PT",
+      "SI",
+      "SK",
+      "FI"
+      ],
+    "EA18": [
+      "BE",
+      "DE",
+      "EE",
+      "IE",
+      "EL",
+      "ES",
+      "FR",
+      "IT",
+      "CY",
+      "LV",
+      "LU",
+      "MT",
+      "NL",
+      "AT",
+      "PT",
+      "SI",
+      "SK",
+      "FI"
+      ],
+    "EA17": [
+      "BE",
+      "DE",
+      "EE",
+      "IE",
+      "EL",
+      "ES",
+      "FR",
+      "IT",
+      "CY",
+      "LU",
+      "MT",
+      "NL",
+      "AT",
+      "PT",
+      "SI",
+      "SK",
+      "FI"
+      ],
+    "EA16": [
+      "BE",
+      "DE",
+      "IE",
+      "EL",
+      "ES",
+      "FR",
+      "IT",
+      "CY",
+      "LU",
+      "MT",
+      "NL",
+      "AT",
+      "PT",
+      "SI",
+      "SK",
+      "FI"
+      ],
+    "EA15": [
+      "BE",
+      "DE",
+      "IE",
+      "EL",
+      "ES",
+      "FR",
+      "IT",
+      "CY",
+      "LU",
+      "MT",
+      "NL",
+      "AT",
+      "PT",
+      "SI",
+      "FI"
+      ],
+    "EA13": [
+      "BE",
+      "DE",
+      "IE",
+      "EL",
+      "ES",
+      "FR",
+      "IT",
+      "LU",
+      "NL",
+      "AT",
+      "PT",
+      "SI",
+      "FI"
+      ],
+    "EA12": [
+      "BE",
+      "DE",
+      "IE",
+      "EL",
+      "ES",
+      "FR",
+      "IT",
+      "LU",
+      "NL",
+      "AT",
+      "PT",
+      "FI"
+      ],
+    "EA11": [
+      "BE",
+      "DE",
+      "IE",
+      "ES",
+      "FR",
+      "IT",
+      "LU",
+      "NL",
+      "AT",
+      "PT",
+      "FI"
+      ],
+    "NMS13": [
+      "BG",
+      "CZ",
+      "EE",
+      "HR",
+      "CY",
+      "LV",
+      "LT",
+      "HU",
+      "MT",
+      "PL",
+      "RO",
+      "SI",
+      "SK"
+      ],
+    "NMS12": [
+      "BG",
+      "CZ",
+      "EE",
+      "CY",
+      "LV",
+      "LT",
+      "HU",
+      "MT",
+      "PL",
+      "RO",
+      "SI",
+      "SK"
+      ],
+    "NMS10": [
+      "CZ",
+      "EE",
+      "CY",
+      "LV",
+      "LT",
+      "HU",
+      "MT",
+      "PL",
+      "SI",
+      "SK"
+      ],
+    "NMS2": [
+      "BG",
+      "RO"
+      ],
+    "EU28_EFTA": [
+      "BE",
+      "BG",
+      "CZ",
+      "DK",
+      "DE",
+      "EE",
+      "IE",
+      "EL",
+      "ES",
+      "FR",
+      "HR",
+      "IT",
+      "CY",
+      "LV",
+      "LT",
+      "LU",
+      "HU",
+      "MT",
+      "NL",
+      "AT",
+      "PL",
+      "PT",
+      "RO",
+      "SI",
+      "SK",
+      "FI",
+      "SE",
+      "UK",
+      "IS",
+      "NO",
+      "CH",
+      "LI"
+      ]  
   }
 }
