added get_compressed_sdmx function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(clean_restatapi_cache)
 export(extract_data)
 export(extract_dsd)
 export(extract_toc)
+export(get_compressed_sdmx)
 export(get_eurostat_bulk)
 export(get_eurostat_cache)
 export(get_eurostat_data)
