--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,5 @@
 pandoc: 2.3.1
-pkgdown: 1.3.0.9100
-pkgdown_sha: 56fe09351537ee9860d93461aa22f720650a3377
+pkgdown: 1.4.1
+pkgdown_sha: ~
 articles: []
 
