--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: restatapi
 Type: Package
 Title: Search and Retrieve Data from Eurostat Database
-Date: 2019-11-19
-Version: 0.4.14
+Date: 2019-11-20
+Version: 0.5.1
 Encoding: UTF-8
 Authors@R: person("Mátyás", "Mészáros", email = "matyas.meszaros@ec.europa.eu", role = c("aut", "cre"))
 Description: Eurostat is the statistical office of the European Union and provides high quality statistics for Europe.
@@ -11,7 +11,7 @@ Description: Eurostat is the statistical office of the European Union and provid
              (<https://ec.europa.eu/eurostat/web/sdmx-web-services/about-this-service>) to search and download data from 
              the Eurostat database using the SDMX standard. 
 License: EUPL-1.1 
-Imports: data.table, rjson, rsdmx, xml2
+Imports: data.table, rjson, xml2
 Suggests: knitr, rmarkdown, testthat
 LazyData: true
 NeedsCompilation: no
