--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: restatapi
 Type: Package
 Title: Search and Retrieve Data from Eurostat Database
 Date: 2020-04-22
-Version: 0.7.11
+Version: 0.7.12
 Encoding: UTF-8
 Authors@R: person("Mátyás", "Mészáros", email = "matyas.meszaros@ec.europa.eu", role = c("aut", "cre"))
 Description: Eurostat is the statistical office of the European Union and provides high quality statistics for Europe.
@@ -12,7 +12,7 @@ Description: Eurostat is the statistical office of the European Union and provid
              the Eurostat database using the SDMX standard. 
 License: EUPL-1.1 
 Imports: data.table, rjson, xml2
-Suggests: knitr, rmarkdown, testthat
+Suggests: chron, knitr, rmarkdown, testthat
 LazyData: true
 NeedsCompilation: no
 URL: https://github.com/eurostat/restatapi
