--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: restatapi
 Type: Package
 Title: Search and Retrieve Data from Eurostat Database
-Date: 2020-09-17
-Version: 0.8.10
+Date: 2020-10-18
+Version: 0.9.0
 Encoding: UTF-8
 Authors@R: person("Mátyás", "Mészáros", email = "matyas.meszaros@ec.europa.eu", role = c("aut", "cre"))
 Description: Eurostat is the statistical office of the European Union and provides high quality statistics for Europe.
@@ -10,7 +10,7 @@ Description: Eurostat is the statistical office of the European Union and provid
              The tools are using the REST API with the Statistical Data and Metadata eXchange (SDMX <https://sdmx.org>) Web Services 
              (<https://ec.europa.eu/eurostat/web/sdmx-web-services/about-this-service>) to search and download data from 
              the Eurostat database using the SDMX standard. 
-License: EUPL-1.2
+License: EUPL
 Imports: data.table, rjson, xml2
 Suggests: chron, knitr, rmarkdown, testthat
 LazyData: true
