--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,6 @@ jobs:
 
       - name: Deploy package
         run: |
-          git config --local user.email "actions@github.com"
+          git config --local user.email "34501282+mmatyi@users.noreply.github.com"
           git config --local user.name "GitHub Actions"
           Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
