--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -1,35 +1,3 @@
-
-Skip to content
-Pull requests
-Issues
-Marketplace
-Explore
-@mmatyi
-dieghernan /
-giscoR
-
-1
-20
-
-    0
-
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-
-    Insights
-
-giscoR/.github/workflows/check-full.yaml
-@dieghernan
-dieghernan Modify latest
-Latest commit d6aa29b 3 days ago
-History
-1 contributor
-92 lines (75 sloc) 3.01 KB
 # For help debugging build failures open an issue on the RStudio community with the 'github-actions' tag.
 # https://community.rstudio.com/new-topic?category=Package%20development&tags=github-actions
 on:
@@ -40,7 +8,7 @@ on:
     branches:
       - master
   schedule:
-      - cron:  '0 6 * * 3,6'
+      - cron:  '0 6 1 * *'
 
 
 name: R-CMD-check
@@ -121,18 +89,3 @@ jobs:
         with:
           name: ${{ runner.os }}-r${{ matrix.config.r }}-results
           path: check
-
-    © 2021 GitHub, Inc.
-    Terms
-    Privacy
-    Security
-    Status
-    Help
-
-    Contact GitHub
-    Pricing
-    API
-    Training
-    Blog
-    About
-
