--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: restatapi
 Type: Package
 Title: Search and Retrieve Data from Eurostat Database
-Date: 2021-03-09
-Version: 0.9.12
+Date: 2021-03-10
+Version: 0.10.0
 Encoding: UTF-8
 Authors@R: person("Mátyás", "Mészáros", email = "matyas.meszaros@ec.europa.eu", role = c("aut", "cre"))
 Description: Eurostat is the statistical office of the European Union and provides high quality statistics for Europe.
@@ -12,7 +12,7 @@ Description: Eurostat is the statistical office of the European Union and provid
              the Eurostat database using the SDMX standard. 
 License: EUPL
 Imports: data.table, rjson, xml2
-Suggests: chron, knitr, rmarkdown, testthat
+Suggests: chron, knitr, rmarkdown, tinytest
 LazyData: true
 NeedsCompilation: no
 URL: https://github.com/eurostat/restatapi
