--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         config:
         - {os: windows-latest, r: 'latest'}
-      #  - {os: windows-latest, r: 'devel'}
+        - {os: windows-latest, r: 'devel'}
         - {os: windows-latest, r: 'release'}
         - {os: windows-latest, r: 'oldrel'}
         - {os: macOS-latest, r: 'latest'}
