--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -23,14 +23,30 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - {os: windows-latest, r: 'latest'}
+          - {os: windows-latest,   r: 'devel'}
+          - {os: macOS-latest,   r: '4.1'}
+          # - {os: macOS-latest,   r: '4.0'}
+          # - {os: macOS-latest,   r: '3.6'}
+          # - {os: macOS-latest,   r: '3.5'}
+          - {os: windows-latest, r: '4.1'}
+          # - {os: windows-latest, r: '4.0'}
+          # - {os: windows-latest, r: '3.6'}
+          # - {os: windows-latest, r: '3.5'}
+          # - {os: ubuntu-16.04, r: '4.1', rspm: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
+          # - {os: ubuntu-16.04, r: '4.0', rspm: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
+          # - {os: ubuntu-16.04, r: '3.6', rspm: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
+          # - {os: ubuntu-16.04, r: '3.5', rspm: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
+          # - {os: ubuntu-16.04, r: '4.0', cran: "https://cran.r-project.org"}
+          - {os: ubuntu-18.04, r: '4.0', cran: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest"}
+          - {os: ubuntu-20.04, r: '4.0', cran: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
+        #- {os: windows-latest, r: 'latest'}
         #- {os: windows-latest, r: 'devel'}
-        - {os: windows-latest, r: 'release'}
-        - {os: windows-latest, r: 'oldrel'}
-        - {os: macOS-latest, r: 'latest'}
-        - {os: macOS-latest, r: 'devel'}
-        - {os: macOS-latest, r: 'release'}
-        - {os: macOS-latest, r: 'oldrel'}
+        #- {os: windows-latest, r: 'release'}
+        #- {os: windows-latest, r: 'oldrel'}
+        #- {os: macOS-latest, r: 'latest'}
+        #- {os: macOS-latest, r: 'devel'}
+        #- {os: macOS-latest, r: 'release'}
+        #- {os: macOS-latest, r: 'oldrel'}
         #- {os: ubuntu-16.04, r: 'latest', cran: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
         #- {os: ubuntu-latest, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
         #- {os: ubuntu-latest, r: 'devel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
