--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -37,21 +37,23 @@ jobs:
           # - {os: ubuntu-16.04, r: '3.6', rspm: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
           # - {os: ubuntu-16.04, r: '3.5', rspm: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
           # - {os: ubuntu-16.04, r: '4.0', cran: "https://cran.r-project.org"}
-          - {os: ubuntu-18.04, r: '4.0', cran: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest"}
-          - {os: ubuntu-20.04, r: '4.0', cran: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-        #- {os: windows-latest, r: 'latest'}
-        #- {os: windows-latest, r: 'devel'}
-        #- {os: windows-latest, r: 'release'}
-        #- {os: windows-latest, r: 'oldrel'}
-        #- {os: macOS-latest, r: 'latest'}
-        #- {os: macOS-latest, r: 'devel'}
-        #- {os: macOS-latest, r: 'release'}
-        #- {os: macOS-latest, r: 'oldrel'}
-        #- {os: ubuntu-16.04, r: 'latest', cran: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
-        #- {os: ubuntu-latest, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-        #- {os: ubuntu-latest, r: 'devel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-        #- {os: ubuntu-latest, r: 'oldrel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-        #- {os: ubuntu-latest, r: '3.6', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
+          - {os: ubuntu-16.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
+          - {os: ubuntu-latest, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
+          #- {os: ubuntu-18.04, r: '4.0', cran: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest"}
+          #- {os: ubuntu-20.04, r: '4.0', cran: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
+          - {os: windows-latest, r: 'latest'}
+          #- {os: windows-latest, r: 'devel'}
+          - {os: windows-latest, r: 'release'}
+          #- {os: windows-latest, r: 'oldrel'}
+          - {os: macOS-latest, r: 'latest'}
+          - {os: macOS-latest, r: 'devel'}
+          - {os: macOS-latest, r: 'release'}
+          #- {os: macOS-latest, r: 'oldrel'}
+          - {os: ubuntu-16.04, r: 'latest', cran: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
+          - {os: ubuntu-latest, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
+          - {os: ubuntu-latest, r: 'devel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
+          #- {os: ubuntu-latest, r: 'oldrel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
+          #- {os: ubuntu-latest, r: '3.6', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
 
  
     env:
