--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: restatapi
 Type: Package
 Title: Search and Retrieve Data from Eurostat Database
-Date: 2021-10-05
-Version: 0.12.0
+Date: 2021-10-06
+Version: 0.12.1
 Encoding: UTF-8
 Authors@R: person("Mátyás", "Mészáros", email = "matyas.meszaros@ec.europa.eu", role = c("aut", "cre"))
 Description: Eurostat is the statistical office of the European Union and provides high quality statistics for Europe.
@@ -17,3 +17,6 @@ NeedsCompilation: no
 URL: https://github.com/eurostat/restatapi
 BugReports: https://github.com/eurostat/restatapi/issues
 RoxygenNote: 7.1.1
+Packaged: 2021-10-06 08:46:52 UTC; mmeszaros
+Author: Mátyás Mészáros [aut, cre]
+Maintainer: Mátyás Mészáros <matyas.meszaros@ec.europa.eu>
