--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: restatapi
 Type: Package
 Title: Search and Retrieve Data from Eurostat Database
-Date: 2021-10-06
-Version: 0.12.1
+Date: 2021-10-07
+Version: 0.12.2
 Encoding: UTF-8
 Authors@R: person("Mátyás", "Mészáros", email = "matyas.meszaros@ec.europa.eu", role = c("aut", "cre"))
 Description: Eurostat is the statistical office of the European Union and provides high quality statistics for Europe.
              Large set of the data is disseminated through the Eurostat database (<https://ec.europa.eu/eurostat/data/database>). 
-             The tools are using the REST API with the Statistical Data and Metadata eXchange (SDMX <https://sdmx.org>) Web Services 
+             The tools are using the REST API with the Statistical Data and Metadata eXchange (SDMX) Web Services 
              (<https://ec.europa.eu/eurostat/web/sdmx-web-services/about-this-service>) to search and download data from 
              the Eurostat database using the SDMX standard. 
 License: EUPL
