--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: restatapi
 Type: Package
 Title: Search and Retrieve Data from Eurostat Database
-Date: 2022-10-11
-Version: 0.14.0
+Date: 2023-01-21
+Version: 0.14.1
 Encoding: UTF-8
 Authors@R: person("Mátyás", "Mészáros", email = "matyas.meszaros@ec.europa.eu", role = c("aut", "cre"))
 Description: Eurostat is the statistical office of the European Union and provides high quality statistics for Europe.
-             Large set of the data is disseminated through the Eurostat database (<https://ec.europa.eu/eurostat/data/database>). 
+             Large set of the data is disseminated through the Eurostat database (<https://ec.europa.eu/eurostat/web/main/data/database>). 
              The tools are using the REST API with the Statistical Data and Metadata eXchange (SDMX) Web Services 
-             (<https://ec.europa.eu/eurostat/web/sdmx-web-services/about-this-service>) to search and download data from 
+             (<https://wikis.ec.europa.eu/pages/viewpage.action?pageId=44165555>) to search and download data from 
              the Eurostat database using the SDMX standard. 
 License: EUPL
 Imports: data.table, rjson, xml2
@@ -16,7 +16,7 @@ Suggests: chron, knitr, rmarkdown, tinytest, remotes
 NeedsCompilation: no
 URL: https://github.com/eurostat/restatapi
 BugReports: https://github.com/eurostat/restatapi/issues
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
 Packaged: 2021-10-06 08:46:52 UTC; mmeszaros
 Author: Mátyás Mészáros [aut, cre]
 Maintainer: Mátyás Mészáros <matyas.meszaros@ec.europa.eu>
