--- a/inst/extdata/rest_api_config.json
+++ b/inst/extdata/rest_api_config.json
@@ -709,7 +709,9 @@
     "1": {
       "ESTAT": "http://ec.europa.eu/eurostat/estat-navtree-portlet-prod/BulkDownloadListing"
     },
-    "2": null,
+    "2":{
+      "ESTAT": "https://ec.europa.eu/eurostat/api/dissemination/sdmx/2.1/data/"
+    },
     "3": null
   },
   "BULK_PARAMETERS": {
