adding the get_eurostat_codelist function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: restatapi
 Type: Package
 Title: Search and Retrieve Data from Eurostat Database
-Date: 2023-07-25
-Version: 0.20.7
+Date: 2023-08-01
+Version: 0.21.0
 Encoding: UTF-8
-Authors@R: person("Mátyás", "Mészáros", email = "matyas.meszaros@ec.europa.eu", role = c("aut", "cre"))
+Authors@R: c(person("Mátyás", "Mészáros", email = "matyas.meszaros@ec.europa.eu", role = c("aut", "cre")),
+            person("Sebastian", "Weinand", role = "ctb"))
 Description: Eurostat is the statistical office of the European Union and provides high quality statistics for Europe.
              Large set of the data is disseminated through the Eurostat database (<https://ec.europa.eu/eurostat/web/main/data/database>). 
              The tools are using the REST API with the Statistical Data and Metadata eXchange (SDMX) Web Services 
