--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(filter_raw_data)
 export(get_compressed_sdmx)
 export(get_eurostat_bulk)
 export(get_eurostat_cache)
+export(get_eurostat_codelist)
 export(get_eurostat_data)
 export(get_eurostat_dsd)
 export(get_eurostat_raw)
