--- a/.github/workflows/check-pak.yaml
+++ b/.github/workflows/check-pak.yaml
@@ -99,7 +99,7 @@ jobs:
 
       - name: Show testthat output
         if: always()
-        run: find check -name 'testthat.Rout*' -exec cat '{}' \; || true
+        run: find check -name 'tinytest.Rout*' -exec cat '{}' \; || true
         shell: bash
 
       - name: Upload check results
