--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Build site
         run: |
           options(asciicast_timeout = 600)
-          rmarkdown::render("README.Rmd")
+          # rmarkdown::render("README.Rmd")
           # roxygen2::roxygenize()
           pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
