--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -2,61 +2,27 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 # https://github.com/r-lib/pak/blob/main/.github/workflows/pkgdown.yaml
 
+# Controls when the action will run. 
 on:
   push:
-    branches: [main, master]
-  pull_request:
-    branches: [main, master]
-  release:
-    types: [published]
-  workflow_dispatch:
+    branches:
+      - main
+      - master
 
-name: pkgdown
+name: pkgdown-regi
 
 jobs:
   pkgdown:
-    runs-on: ubuntu-latest
-    # Only restrict concurrency for non-PR jobs
-    concurrency:
-      group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
+    runs-on: ubuntu-22.04
     env:
+      RSPM: https://packagemanager.rstudio.com/cran/__linux__/bionic/latest
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-    permissions:
-      contents: write
+    name: doc update
+    container: rocker/verse
     steps:
       - uses: actions/checkout@v4
-
-      - uses: r-lib/actions/setup-pandoc@v2
-
-      - uses: r-lib/actions/setup-r@v2
+      - run: Rscript ./.github/workflows/make_doc.R
+      - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          use-public-rspm: true
-
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: any::pkgdown
-          needs: website
-          pak-version: devel
-
-      # otherwise the dynamics docs fail, not sure why
-      - name: Install package
-        run: R CMD INSTALL .
-
-      - name: Build site
-        run: |
-          options(asciicast_timeout = 600)
-          # rmarkdown::render("README.Rmd")
-          # roxygen2::roxygenize()
-          pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
-        shell: Rscript {0}
-        env:
-          IN_PKGDOWN: true
-          ASCIICAST_TIMEOUT: 600
-
-      - name: Deploy to GitHub pages 🚀
-        if: github.event_name != 'pull_request'
-        uses: JamesIves/github-pages-deploy-action@v4.5.0
-        with:
-          clean: false
-          branch: gh-pages
-          folder: docs
+          commit_message: auto updating documentation after commit
+     
